--- a/pages/account_page_styles.css
+++ b/pages/account_page_styles.css
@@ -1,3 +1,11 @@
 #message {
   text-align: center;
 }
+#note_title {
+  width: 40%;
+}
+#note_body {
+  min-width: 20%;
+  width: 40%;
+  max-width: 40%;
+}
