--- a/pages/account_page_styles.css
+++ b/pages/account_page_styles.css
@@ -1,10 +1,10 @@
 #message {
   text-align: center;
 }
-#note_title {
+#note_title, #note_title_update {
   width: 40%;
 }
-#note_body {
+#note_body, #note_body_update {
   min-width: 20%;
   width: 40%;
   max-width: 40%;
